Enviando a base da página de cadastro

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ a {
 body {
   height: 100%;
   width: 100%;
-  background-image: url('./São-Gonçalo-RJ.jpg');
+  background-image: url('/assets/images/São-Gonçalo-RJ.jpg');
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -174,3 +174,11 @@ nav ul li a:hover::after {
 .contato .youtube:hover {
   color: red;
 }
+
+
+
+
+
+
+
+
