Enviando com o diretorio correto

--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700;800;900&family=Roboto:wght@400;500&display=swap');
 
 body {
-  background-image: url('/assets/images/batalhao.jpg') !important;
+  background-image: url('../images/batalhao.jpg') !important;
   background-position: bottom !important;
 }
 
