--- a/assets/css/cadastro.css
+++ b/assets/css/cadastro.css
@@ -14,6 +14,7 @@ main {
   align-items: center;
   flex-wrap: wrap;
   justify-content: center;
+  height: 80vh;
 }
 
 form {
@@ -156,6 +157,12 @@ button:hover {
   gap: 250px;
 }
 
+.title-fotos {
+  text-align: center;
+  color: white;
+  z-index: 2;
+}
+
 .fotos .content-img {
   margin-top: 250px;
   gap: 200px;
@@ -179,11 +186,21 @@ button:hover {
   width: 200px;
   background-color: rgba(238, 238, 238, 0.6);
   border-radius: 10px;
+  transition: 0.8s ease;
+}
+
+.content-img:hover {
+  background-color: rgba(238, 238, 238, 1);
 }
 
 .span-img {
   height: 30px;
   width: 30px;
+  transition: 0.5s ease;
+}
+
+.span-img:hover {
+  transform: scale(1.1);
 }
 
 .content-fotos a {
@@ -195,5 +212,18 @@ button:hover {
 @media only screen and (max-width: 1139px) {
   .fotos .content-fotos {
     gap: 50px;
+    flex-direction: column;
+  }
+  .fotos .content-img {
+    margin: 50px 0px;
+  }
+}
+
+@media only screen and (max-width: 739px) {
+  .fotos .content-fotos {
+    gap: 10px;
+  }
+  .fotos .content-img {
+    margin: 50px 0px;
   }
 }
