--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,3 +180,9 @@ nav ul li a:hover::after {
 .contato .youtube:hover {
   color: red;
 }
+
+@media only screen and (max-width: 739px) {
+  nav ul {
+    margin-right: 0px;
+  }
+}
